2012-06-05  Richard Guenther  <rguenther@suse.de>

	* tree-loop-distribution.c (struct partition_s): Add has_writes
	member.
	(partition_alloc): Initialize it.
	(partition_has_writes): New function.
	(rdg_flag_uses): Adjust.
	(rdg_flag_vertex): Likewise.
	(rdg_flag_vertex_and_dependent): Likewise.
	(rdg_flag_loop_exits): Likewise.
	(build_rdg_partition_for_component): Likewise.
	(rdg_build_partitions): Likewise.

2012-06-05  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53081
	* tree-loop-distribution.c (generate_memset_builtin): Handle all
	kinds of byte-sized stores.
	(classify_partition): Likewise.
	(tree_loop_distribution): Adjust seed statements used for
	!flag_tree_loop_distribution.

2012-06-05  Alan Modra  <amodra@gmail.com>

	* config/rs6000/rs6000.c (ptr_regno_for_savres): Comment.
	(rs6000_emit_prologue): Ensure register used for inline saves
	of vector regs is not the static chain register.  Revise comment.

2012-06-04  Oleg Endo  <olegendo@gcc.gnu.org>

	* doc/md.texi (Standard Pattern Names For Generation): Document
	sincos pattern.

2012-06-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/53555
	* config/i386/i386.c (ix86_sched_reorder) Skip debug insns.

2012-06-04  Jason Merrill  <jason@redhat.com>

	* dwarf2out.c (is_unit_die): New.
	(copy_declaration_context, copy_ancestor_tree): Use it.
	(copy_decls_walk): Likewise.

2012-06-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53524
	* doc/invoke.texi (Wenum-compare): Update documentation.

2012-06-04  Dodji Seketeli  <dodji@redhat.com>

	PR preprocessor/53463
	* parser.c (cp_parser_assignment_expression): Use the location
	for the '=' as the default location for the expression.

2012-06-04  Edmar Wienskoski  <edmar@freescale.com>

	PR target/53559
	* config/rs6000/altivec.md (altivec_stvlx): Change machine mode of
	operands.
	(altivec_stvlxl): Ditto.
	(altivec_stvrx): Ditto.
	(altivec_stvrxl): Ditto.

2012-06-04  Vladimir Makarov  <vmakarov@redhat.com>
